Enable native access for FIPS launchers
Signed-off-by: Alex Ruiz <alejandro.ruiz.becerra@wazuh.com>